gateway_api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: oteldemo-gateway
  namespace: otel-demo
spec:
  gatewayClassName: CLASSNAME_REPLACE
  listeners:
    - name: http
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: oteldemoroute
  namespace: otel-demo
spec:
  parentRefs:
    - name: oteldemo-gateway
  rules:
    - backendRefs:
          - name: opentelemetry-demo-frontendproxy
            port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
   name: hipstershop-gateway
   namespace: hipster-shop
spec:
   gatewayClassName: kuma
   listeners:
   - name: http
     port: 80
     protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hipstershoproute
  namespace: hipster-shop
spec:
  parentRefs:
   - name: hipstershop-gateway
  rules:
   - backendRefs:
       - name: frontend
         port: 80
